v1.17 XW 03-08-2019
fixed: ping

v1.16 XW 02-08-2019
added: some code

v1.15 XW 01-08-2019
removed: sub dirs from meta file
improved: code
removed: some verbose
added: description on object clone

v1.14 XW 31-07-2019
fixed: filesystem

v1.13 XW 30-07-2019
added: network (issue #3)

v1.12 XW 28-07-2019
removed: net driver
improved: code
fixed: sting witch (issue #12)

v1.11 XW 27-07-2019
fixed: naming
added: fileoutputstream.java
expand: stringbuilder.append()

v1.10 XW 26-07-2019
improved: code
removed: AI
fixed: default in interface

v1.9 XW 25-07-2019
changed: to microkernel

v1.8 XW 23-07-2019
added: lance driver (issue #13)
added: ide controller

v1.7 XW 20-07-2019
fixed: bootrc (issue #7)

v1.6 XW 19-07-2019
fixed: PCI and Thread (issue #9)

v1.5 XW 18-07-2019
added: HashMap, fs

v1.4 XW 13-07-2019
added: license file

v1.3 XW 12-07-2019
added: jdk
removed: compiler

v1.2 XW 09-07-2019
improved

v1.1 XW 08-07-2019
added: AI

v1.0 XW 07-07-2019
intial version