@@ -1,5 +1,6 @@
 v1.17 XW 03-08-2019
 fixed: ping
+removed: console and screen code (issue #20)
 
 v1.16 XW 02-08-2019
 added: some code
